Unreachable and data yaml added, conda environment set

--- a/EnvironmentRandomization.ipynb
+++ b/EnvironmentRandomization.ipynb
@@ -18,12 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "5756d468",
    "metadata": {},
    "outputs": [],
    "source": [
     "testfile = 'data.yaml'\n",
+    "\n",
     "\n",
     "def writeToYAML():\n",
     "    with open(testfile, 'w') as f:\n",
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "111fbc5a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "a89b2e97",
    "metadata": {},
    "outputs": [],
@@ -90,10 +91,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "a5b27fd3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Name : unreachable\n",
+      "     Type : static\n",
+      "     Subnets : 4\n",
+      "     Hosts : 3\n",
+      "     OS : 1\n",
+      "     Services : 1\n",
+      "     Processes : 1\n",
+      "     Exploits : 1\n",
+      "     PrivEscs : 1\n",
+      "     Actions : 18\n",
+      "     Observation Dims : (4, 14)\n",
+      "     States : 576\n",
+      "     Step Limit : 1000\n",
+      "       subnets : [1, 1, 1, 1]\n",
+      "       topology : [[1, 1, 0, 0], [1, 1, 1, 1], [0, 1, 1, 1], [0, 1, 1, 1]]\n",
+      "       os : ['linux']\n",
+      "       services : ['ssh']\n",
+      "       processes : ['tomcat']\n",
+      "       sensitive_hosts : {\n",
+      "           (2, 0) : 100\n",
+      "           (3, 0) : 100\n",
+      "       }\n",
+      "       exploits : {\n",
+      "           e_ssh : {\n",
+      "               service : ssh\n",
+      "               os : linux\n",
+      "               prob : 0.8\n",
+      "               cost : 1\n",
+      "               access : 1\n",
+      "           }\n",
+      "       }\n",
+      "       privilege_escalation : {\n",
+      "           pe_tomcat : {\n",
+      "               process : tomcat\n",
+      "               os : linux\n",
+      "               prob : 1.0\n",
+      "               cost : 1\n",
+      "               access : 2\n",
+      "           }\n",
+      "       }\n",
+      "       os_scan_cost : 1\n",
+      "       service_scan_cost : 1\n",
+      "       subnet_scan_cost : 1\n",
+      "       process_scan_cost : 1\n",
+      "       firewall : {\n",
+      "           (0, 1) : []\n",
+      "           (1, 0) : []\n",
+      "           (1, 2) : []\n",
+      "           (2, 1) : []\n",
+      "           (1, 3) : []\n",
+      "           (3, 1) : []\n",
+      "           (2, 3) : []\n",
+      "           (3, 2) : []\n",
+      "       }\n",
+      "       host : {\n",
+      "           (1, 0) : Host: {\n",
+      "\taddress: (1, 0)\n",
+      "\tcompromised: False\n",
+      "\treachable: False\n",
+      "\tvalue: 0.0\n",
+      "\taccess: 0\n",
+      "\tOS: {\n",
+      "\t\tlinux: True\n",
+      "\t}\n",
+      "\tservices: {\n",
+      "\t\tssh: True\n",
+      "\t}\n",
+      "\tprocesses: {\n",
+      "\t\ttomcat: True\n",
+      "\t}\n",
+      "\tfirewall: {\n",
+      "\t\t(3, 0): ['ssh']\n",
+      "\t}\n",
+      "           (2, 0) : Host: {\n",
+      "\taddress: (2, 0)\n",
+      "\tcompromised: False\n",
+      "\treachable: False\n",
+      "\tvalue: 100.0\n",
+      "\taccess: 0\n",
+      "\tOS: {\n",
+      "\t\tlinux: True\n",
+      "\t}\n",
+      "\tservices: {\n",
+      "\t\tssh: True\n",
+      "\t}\n",
+      "\tprocesses: {\n",
+      "\t\ttomcat: True\n",
+      "\t}\n",
+      "\tfirewall: {\n",
+      "\t\t(1, 0): ['ssh']\n",
+      "\t}\n",
+      "           (3, 0) : Host: {\n",
+      "\taddress: (3, 0)\n",
+      "\tcompromised: False\n",
+      "\treachable: False\n",
+      "\tvalue: 100.0\n",
+      "\taccess: 0\n",
+      "\tOS: {\n",
+      "\t\tlinux: True\n",
+      "\t}\n",
+      "\tservices: {\n",
+      "\t\tssh: True\n",
+      "\t}\n",
+      "\tprocesses: {\n",
+      "\t\ttomcat: True\n",
+      "\t}\n",
+      "\tfirewall: {\n",
+      "\t}\n",
+      "       }\n",
+      "       step_limit : 1000\n"
+     ]
+    }
+   ],
    "source": [
     "import nasim\n",
     "import json\n",
@@ -109,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "0b1f15bf",
    "metadata": {},
    "outputs": [],
@@ -119,10 +237,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "991a0d5f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "DependencyNotInstalled",
+     "evalue": "No module named 'tensorboard'. (HINT: you can install tabular_q_learning_agent dependencies by running 'pip install nasim[dqn]'.)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/ql_agent.py:35\u001b[0m\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/ql_agent.py?line=33'>34</a>\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/ql_agent.py?line=34'>35</a>\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtensorboard\u001b[39;00m \u001b[39mimport\u001b[39;00m SummaryWriter\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/ql_agent.py?line=35'>36</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mImportError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/torch/utils/tensorboard/__init__.py:1\u001b[0m\n\u001b[0;32m----> <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/torch/utils/tensorboard/__init__.py?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorboard\u001b[39;00m\n\u001b[1;32m      <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/torch/utils/tensorboard/__init__.py?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdistutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mversion\u001b[39;00m \u001b[39mimport\u001b[39;00m LooseVersion\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorboard'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mDependencyNotInstalled\u001b[0m                    Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [38], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnasim\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01magents\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mql_agent\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TabularQLearningAgent\n\u001b[1;32m      3\u001b[0m ql_agent \u001b[38;5;241m=\u001b[39m TabularQLearningAgent(env, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, training_steps\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50000\u001b[39m)\n\u001b[1;32m      4\u001b[0m ql_agent\u001b[38;5;241m.\u001b[39mtrain()\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/ql_agent.py:38\u001b[0m\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/ql_agent.py?line=35'>36</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mImportError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/ql_agent.py?line=36'>37</a>\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mgymnasium\u001b[39;00m \u001b[39mimport\u001b[39;00m error\n\u001b[0;32m---> <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/ql_agent.py?line=37'>38</a>\u001b[0m     \u001b[39mraise\u001b[39;00m error\u001b[39m.\u001b[39mDependencyNotInstalled(\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/ql_agent.py?line=38'>39</a>\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00me\u001b[39m}\u001b[39;00m\u001b[39m. (HINT: you can install tabular_q_learning_agent dependencies \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/ql_agent.py?line=39'>40</a>\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mby running \u001b[39m\u001b[39m'\u001b[39m\u001b[39mpip install nasim[dqn]\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.)\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/ql_agent.py?line=40'>41</a>\u001b[0m     )\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/ql_agent.py?line=43'>44</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mTabularQFunction\u001b[39;00m:\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/ql_agent.py?line=44'>45</a>\u001b[0m     \u001b[39m\"\"\"Tabular Q-Function \"\"\"\u001b[39;00m\n",
+      "\u001b[0;31mDependencyNotInstalled\u001b[0m: No module named 'tensorboard'. (HINT: you can install tabular_q_learning_agent dependencies by running 'pip install nasim[dqn]'.)"
+     ]
+    }
+   ],
    "source": [
     "from nasim.agents.ql_agent import TabularQLearningAgent\n",
     "\n",
@@ -141,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "73c4bda9",
    "metadata": {},
    "outputs": [],
@@ -179,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "0bbd02bf",
    "metadata": {},
    "outputs": [],
@@ -196,10 +332,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7c99801e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "DependencyNotInstalled",
+     "evalue": "No module named 'tensorboard'. (HINT: you can install dqn_agent dependencies by running 'pip install nasim[dqn]'.)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/dqn_agent.py:39\u001b[0m\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/dqn_agent.py?line=37'>38</a>\u001b[0m     \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfunctional\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mF\u001b[39;00m\n\u001b[0;32m---> <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/dqn_agent.py?line=38'>39</a>\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtensorboard\u001b[39;00m \u001b[39mimport\u001b[39;00m SummaryWriter\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/dqn_agent.py?line=39'>40</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mImportError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/torch/utils/tensorboard/__init__.py:1\u001b[0m\n\u001b[0;32m----> <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/torch/utils/tensorboard/__init__.py?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorboard\u001b[39;00m\n\u001b[1;32m      <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/torch/utils/tensorboard/__init__.py?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdistutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mversion\u001b[39;00m \u001b[39mimport\u001b[39;00m LooseVersion\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorboard'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mDependencyNotInstalled\u001b[0m                    Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [22], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnasim\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01menvs\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01maction\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Action\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnasim\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01magents\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdqn_agent\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DQNAgent\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnasim\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01menvs\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01menvironment\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m NASimEnv\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# User-defined Python method to check whether the selected blocked_host is valid to select\u001b[39;00m\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/dqn_agent.py:41\u001b[0m\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/dqn_agent.py?line=38'>39</a>\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtensorboard\u001b[39;00m \u001b[39mimport\u001b[39;00m SummaryWriter\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/dqn_agent.py?line=39'>40</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mImportError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m---> <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/dqn_agent.py?line=40'>41</a>\u001b[0m     \u001b[39mraise\u001b[39;00m error\u001b[39m.\u001b[39mDependencyNotInstalled(\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/dqn_agent.py?line=41'>42</a>\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00me\u001b[39m}\u001b[39;00m\u001b[39m. (HINT: you can install dqn_agent dependencies by running \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/dqn_agent.py?line=42'>43</a>\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39mpip install nasim[dqn]\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.)\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/dqn_agent.py?line=43'>44</a>\u001b[0m     )\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/dqn_agent.py?line=46'>47</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mReplayMemory\u001b[39;00m:\n\u001b[1;32m     <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/nasim/agents/dqn_agent.py?line=48'>49</a>\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, capacity, s_dims, device\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcpu\u001b[39m\u001b[39m\"\u001b[39m):\n",
+      "\u001b[0;31mDependencyNotInstalled\u001b[0m: No module named 'tensorboard'. (HINT: you can install dqn_agent dependencies by running 'pip install nasim[dqn]'.)"
+     ]
+    }
+   ],
    "source": [
     "# Import necessary libraries, including which methods will be redefined\n",
     "import nasim\n",
@@ -330,10 +484,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "ff038d0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dqn_agent' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdqn_agent\u001b[49m\u001b[38;5;241m.\u001b[39mrun_eval_episode(render\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dqn_agent' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dqn_agent.run_eval_episode(render=False)"
    ]
@@ -507,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
